--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:white; font-family: sans-serif;}
+h1{color:gray;}
+button {background-color:lightgray;}
+.center {
+  text-align: center;
+  border: 3px solid green;
+}
 
 
