--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
-body {background-color:white; font-family: sans-serif;}
-h1{color:gray;}
-button {background-color:lightgray;}
-.center {
+body {background-color:black; color:white; font-family: arial;}
+h1 {color:gray; font-family: verdana;}
+.maindiv {
+    background-color:white; color:black; 
+    width: 300px; padding: 20px;
+    border-radius: 25px;
+    text-align: center;
+    }
+/* button {background-color:lightgray;} */
+/* .center {
   text-align: center;
   border: 3px solid green;
-}
+} */
 
 
