--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@ h1 {color:gray; font-family: verdana;}
     border-radius: 25px;
     text-align: center;
     }
-/* button {background-color:lightgray;} */
-/* .center {
-  text-align: center;
-  border: 3px solid green;
-} */
-
-
+td {text-align: left;}
+p {text-align: left;}
+button {background-color:lightgray;}
+.highlight {background-color:yellow;}
